[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Plain.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Spikes.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Plain.gd" type="Script" id=3]
[ext_resource path="res://Music/LowBeep.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 36.0

[node name="Plain" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Spikes" type="Sprite" parent="."]
visible = false
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 8.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Plain_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
